feat: update website content and style

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         </section>
 
         <section id="history">
-            <h2>2.1 歴史と起源 (歴史と起源)</h2>
+            <h2>2.1 歴史と起源 </h2>
             <p>鴨川は、京都市の北部に位置する桟敷ヶ岳（さじきがたけ）を源流とし、京都市内を南へ流れ、桂川と合流して淀川へと注ぎます。全長は約33kmです。</p>
             <p>平安京の造営以来、鴨川は都の生活に欠かせない存在であり、人々の暮らし、文化、信仰と深く結びついてきました。古くから水害に見舞われることもありましたが、そのたびに治水工事が行われ、現在の姿へと至っています。</p>
             <div class="timeline">
@@ -46,7 +46,7 @@
         </section>
 
         <section id="environment">
-            <h2>2.2 環境と水系 (環境と水系)</h2>
+            <h2>2.2 環境と水系 </h2>
             <p>鴨川の生態系は、上流の山間部から中流の市街地、下流の合流地点まで、多様な環境を持っています。</p>
             <ul>
                 <li>**上流**：豊かな森林に囲まれ、清流が多くの動植物を育んでいます。</li>
@@ -61,7 +61,7 @@
         </section>
 
         <section id="seasons">
-            <h2>2.3 四季の風景 (四季の風景)</h2>
+            <h2>2.3 四季の風景 </h2>
             <p>鴨川は四季折々で異なる表情を見せ、訪れる人々を魅了します。</p>
             <div class="gallery">
                 <div class="gallery-item">
