--- a/wildlife.html
+++ b/wildlife.html
@@ -36,11 +36,11 @@
         </section>
 
         <section id="birds">
-            <h2>3.1 鳥類の世界 (鳥類の世界)</h2>
+            <h2>3.1 鳥類の世界</h2>
             <div class="wildlife-grid">
                 <div class="wildlife-card">
                     <img src="images/mallard.jpg" alt="マガモ">
-                    <h3>マガモ (まがも)</h3>
+                    <h3>マガモ</h3>
                     <p>冬鳥としてよく見られるカモの一種。鮮やかな緑色の頭を持つオスは特に目を引きます。</p>
                     </div>
                 <div class="wildlife-card">
@@ -55,14 +55,24 @@
                 </div>
                 <div class="wildlife-card">
                     <img src="images/cormorant.jpg" alt="カワウ">
-                    <h3>カワウ (かわう)</h3>
+                    <h3>カワウ</h3>
                     <p>魚を捕るのが得意な水鳥。羽を広げて乾かす姿をよく見かけます。</p>
+                </div>
+                <div class="wildlife-card">
+                    <img src="images/tobi.jpg" alt="カワウ">
+                    <h3>トビ</h3>
+                    <p>鴨川によく見られるトビ（トンビ）は、大きく広げた翼と鋭い鳴き声が特徴の猛禽類です。</p>
+                </div>
+                <div class="wildlife-card">
+                    <img src="images/ikaru.jpg" alt="カワウ">
+                    <h3>イカルチドリ</h3>
+                    <p>矶鹬は、川原の石の間をすばやく歩き回る、小さな体と長いくちばしが特徴の鳥です。</p>
                 </div>
             </div>
         </section>
 
         <section id="fish-aquatic">
-            <h2>3.2 魚類と水生生物 (魚類と水生生物)</h2>
+            <h2>3.2 魚類と水生生物 </h2>
             <div class="wildlife-grid">
                 <div class="wildlife-card">
                     <img src="images/ayu.jpg" alt="アユ">
@@ -83,7 +93,7 @@
         </section>
 
         <section id="plants">
-            <h2>3.3 植物群落 (植物群落)</h2>
+            <h2>3.3 植物群落</h2>
             <div class="wildlife-grid">
                 <div class="wildlife-card">
                     <img src="images/willow.jpg" alt="ヤナギ">
