Update wildlife.html with new content

--- a/wildlife.html
+++ b/wildlife.html
@@ -45,12 +45,12 @@
                     </div>
                 <div class="wildlife-card">
                     <img src="images/grey-heron.jpg" alt="アオサギ">
-                    <h3>アオサギ (あおさぎ)</h3>
+                    <h3>アオサギ </h3>
                     <p>日本で見られるサギ類で最大級。じっと獲物を待つ姿は鴨川の風景の一部です。</p>
                 </div>
                 <div class="wildlife-card">
                     <img src="images/kingfisher.jpg" alt="カワセミ">
-                    <h3>カワセミ (かわせみ)</h3>
+                    <h3>カワセミ </h3>
                     <p>「清流の宝石」と呼ばれる美しい鳥。小魚を捕らえるために急降下する姿は必見です。</p>
                 </div>
                 <div class="wildlife-card">
@@ -76,17 +76,17 @@
             <div class="wildlife-grid">
                 <div class="wildlife-card">
                     <img src="images/ayu.jpg" alt="アユ">
-                    <h3>アユ (あゆ)</h3>
+                    <h3>アユ </h3>
                     <p>清流の象徴。夏には「アユの友釣り」も行われます。</p>
                 </div>
                 <div class="wildlife-card">
                     <img src="images/carp.jpg" alt="コイ">
-                    <h3>コイ (こい)</h3>
+                    <h3>コイ</h3>
                     <p>鴨川でも比較的大きな個体を見ることができます。悠々と泳ぐ姿は癒しを与えます。</p>
                 </div>
                 <div class="wildlife-card">
                     <img src="images/firefly.jpg" alt="ゲンジボタル">
-                    <h3>ゲンジボタル (げんじぼたる)</h3>
+                    <h3>ゲンジボタル </h3>
                     <p>夏の夜、清らかな水辺で光を放ち、幻想的な風景を作り出します。</p>
                 </div>
                 </div>
@@ -97,17 +97,17 @@
             <div class="wildlife-grid">
                 <div class="wildlife-card">
                     <img src="images/willow.jpg" alt="ヤナギ">
-                    <h3>ヤナギ (やなぎ)</h3>
+                    <h3>ヤナギ</h3>
                     <p>鴨川の河川敷に多く見られ、風になびく姿が風情を添えます。</p>
                 </div>
                 <div class="wildlife-card">
                     <img src="images/cherry-tree.jpg" alt="サクラ">
-                    <h3>サクラ (さくら)</h3>
+                    <h3>サクラ</h3>
                     <p>春には鴨川沿いの桜並木が、多くの人々を魅了します。</p>
                 </div>
                 <div class="wildlife-card">
                     <img src="images/reed.jpg" alt="アシ">
-                    <h3>アシ (あし)</h3>
+                    <h3>アシ </h3>
                     <p>水辺に生育し、水質浄化にも貢献する重要な植物です。</p>
                 </div>
             </div>
